removed dependencies from lib that shouldn't be there and added a few